fix modo escuro and modo contraste h2

--- a/src/app/tec-libras-client/level-themes-subjects/level-themes/level-themes.component.scss
+++ b/src/app/tec-libras-client/level-themes-subjects/level-themes/level-themes.component.scss
@@ -1,3 +1,15 @@
+:host-context(body.modo-escuro)  {
+    h2 {
+        color: #f9f9f9;
+    }
+}
+
+:host-context(body.modo-contraste)  {
+    h2 {
+        color: #ffffff;
+    }
+}
+
 h2 {
     font-family: "Rawline Bold", sans-serif;
     color: #292929;
